# workload-processor

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  setup.cfg
.github/workflows/: docs.yaml  tests.yaml
agendas/: agenda_drarm.yaml  agenda_fortnite.yaml  agenda_geekbench.yaml  agenda_jankbench.yaml  agenda_speedometer.yaml
assets/: p6-generate-platform-info.py
ipynb/: drarm_full.ipynb  fortnite_full.ipynb  geekbench_full.ipynb  jankbench_full.ipynb  speedometer_full.ipynb
plugins/: fortnite.py
tests/: test_processor.py
wp/: analysis.py  cli.py  config_default.yaml  constants.py  device.py  exception.py  helpers.py  notebook.py  processor.py  runner.py  trace_to_dfs.py
