[project]
name = "workload-processor"
version = "0.0.1"
authors = [
  { name="Kajetan Puchalski", email="kajetan.puchalski@arm.com" },
]
description = "WA Workload Processor"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tools.setuptools]
packages = ['wp']

[project.scripts]
workload-processor = "wp.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

