[project]
name = "workload-processor"
version = "0.1.1"
authors = [
  { name="Kajetan Puchalski", email="kajetan.puchalski@arm.com" },
]
description = "WA Workload Processor"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 2-Clause License",
    "Operating System :: OS Independent",
]
dependencies = [
    "plotly >= 5.15.0",
    "tabulate >= 0.9.0",
    "confuse >= 2.0.1",
    "polars >= 0.19.7",
    "pdoc >= 14.0.0",
    "xarray >= 2023.1.0",
    "datashader >= 0.15.1",
    "kaleido >= 0.2.1"
]

[optional-dependencies]
all = [
    "lisa_linux @ git+https://github.com/ARM-software/lisa.git#egg=lisa_linux",
    "wlauto @ git+https://github.com/ARM-software/lisa.git#egg=wlauto&subdirectory=external/workload-automation",
    "devlib @ git+https://github.com/ARM-software/lisa.git#egg=devlib&subdirectory=external/devlib",
    "pytest>=7.4.1",
    "pytest-resource-path>=1.3.0"
]

[project.scripts]
workload-processor = "wp.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
