[options]
packages = find:
exclude = ['agendas', 'assets']
install_requires =
	plotly == 5.15.0
	pure-python-adb == 0.3.0.dev0
	tabulate == 0.9.0
	confuse==2.0.1
	polars==0.17.12
	pdoc==14.0.0
	lisa_linux @ git+https://github.com/ARM-software/lisa.git#egg=lisa_linux
	devlib @ git+https://github.com/ARM-software/lisa.git#egg=devlib&subdirectory=external/devlib
	bisector @ git+https://github.com/ARM-software/lisa.git#egg=bisector&subdirectory=tools/bisector
	exekall @ git+https://github.com/ARM-software/lisa.git#egg=exekall&subdirectory=tools/exekall
	wlauto @ git+https://github.com/ARM-software/lisa.git#egg=wlauto&subdirectory=external/workload-automation

[options.package_data]
* =
	*.yaml
