[options]
packages = find:
exclude = ['agendas', 'assets']
install_requires =
    plotly == 5.15.0
    tabulate == 0.9.0
    confuse==2.0.1
    polars==0.17.12
    pdoc==14.0.0
    xarray==2023.1.0
    datashader==0.15.1

[options.extras_require]
all =
    lisa_linux @ git+https://github.com/ARM-software/lisa.git#egg=lisa_linux
    wlauto @ git+https://github.com/ARM-software/lisa.git#egg=wlauto&subdirectory=external/workload-automation
    devlib @ git+https://github.com/ARM-software/lisa.git#egg=devlib&subdirectory=external/devlib

[options.package_data]
* =
    *.yaml
